@@ -10,7 +10,7 @@
 """
 from ..addon import utils
 from ..addon.common import kodi
-from ..addon.googl_shorten import googl_url
+from ..addon.google_firebase import dynamic_links_short_url
 from ..addon.utils import i18n
 
 
@@ -18,7 +18,7 @@ def route(api):
     redirect_uri = utils.get_redirect_uri()
     request_url = api.client.prepare_request_uri(redirect_uri=redirect_uri, scope=api.required_scopes)
     try:
-        short_url = googl_url(request_url)
+        short_url = dynamic_links_short_url(request_url)
     except:
         short_url = None
     prompt_url = short_url if short_url else i18n('authorize_url_fail')
