@@ -1,5 +1,6 @@
 2.4.3
 [fix] ads causing playback issues with InputStream Adaptive
+[fix] migrate url shortener from Google URL Shortener to Google Firebase Dynamic Links
 [upd] move Live Notifications to it's own thread
 
 2.4.2
